hphp/hack/test/ifc/check/dict.php.exp
=== IFC analysis results for dict.php
File "dict.php", line 27, characters 5-39:
Data with policy `S` appears in context `B`. (Typing[4379])
  File "dict.php", line 5, characters 17-34:
  This may be the data source with policy `S`
  File "dict.php", line 7, characters 15-27:
  This may be the data sink with policy `B`
File "dict.php", line 19, characters 5-53:
Data with policy `S` appears in context `D`. (Typing[4379])
  File "dict.php", line 5, characters 17-34:
  This may be the data source with policy `S`
  File "dict.php", line 9, characters 28-41:
  This may be the data sink with policy `D`
File "dict.php", line 19, characters 5-53:
Data with policy `B` appears in context `D`. (Typing[4379])
  File "dict.php", line 7, characters 15-27:
  This may be the data source with policy `B`
  File "dict.php", line 9, characters 28-41:
  This may be the data sink with policy `D`
File "dict.php", line 23, characters 5-39:
Data with policy `S` appears in context `D`. (Typing[4379])
  File "dict.php", line 5, characters 17-34:
  This may be the data source with policy `S`
  File "dict.php", line 9, characters 28-41:
  This may be the data sink with policy `D`
File "dict.php", line 13, characters 5-40:
Data with policy `B` appears in context `D`. (Typing[4379])
  File "dict.php", line 7, characters 15-27:
  This may be the data source with policy `B`
  File "dict.php", line 9, characters 28-41:
  This may be the data sink with policy `D`
File "dict.php", line 44, characters 5-24:
Data with policy `X` appears in context `DICT`. (Typing[4379])
  File "dict.php", line 34, characters 17-18:
  This may be the data source with policy `X`
  File "dict.php", line 38, characters 30-34:
  This may be the data sink with policy `DICT`
  File "dict.php", line 42, characters 5-26:
  Another program point contributing to the illegal flow
